--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,19 +36,19 @@ jobs:
       - name: Set environment variables based on branch
         run: |
           if [[ "${{ github.ref_name }}" == "master" ]]; then
-            echo "STRAPI_URL=${{ secrets.PROD_STRAPI_URL }}" >> $GITHUB_ENV
-            echo "STRAPI_TOKEN=${{ secrets.PROD_STRAPI_TOKEN }}" >> $GITHUB_ENV
+            echo "STRAPI_API_URL=${{ secrets.PROD_STRAPI_URL }}" >> $GITHUB_ENV
+            echo "STRAPI_API_TOKEN=${{ secrets.PROD_STRAPI_TOKEN }}" >> $GITHUB_ENV
             echo "Using production Strapi: ${{ secrets.PROD_STRAPI_URL }}"
           else
-            echo "STRAPI_URL=${{ secrets.DEV_STRAPI_URL }}" >> $GITHUB_ENV
-            echo "STRAPI_TOKEN=${{ secrets.DEV_STRAPI_TOKEN }}" >> $GITHUB_ENV
+            echo "STRAPI_API_URL=${{ secrets.DEV_STRAPI_URL }}" >> $GITHUB_ENV
+            echo "STRAPI_API_TOKEN=${{ secrets.DEV_STRAPI_TOKEN }}" >> $GITHUB_ENV
             echo "Using development Strapi: ${{ secrets.DEV_STRAPI_URL }}"
           fi
 
       - name: Build Astro site
         env:
-          STRAPI_URL: ${{ env.STRAPI_URL }}
-          STRAPI_TOKEN: ${{ env.STRAPI_TOKEN }}
+          STRAPI_API_URL: ${{ env.STRAPI_API_URL }}
+          STRAPI_API_TOKEN: ${{ env.STRAPI_API_TOKEN }}
         run: pnpm build
 
       # Install Wrangler CLI for Cloudflare Pages deployment
