--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 # Strapi API Configuration
 STRAPI_API_URL="http://localhost:1337/api"
+STRAPI_IMAGES_URL="http://localhost:1337"
 STRAPI_API_TOKEN="05081ad..."
+
+NODE_ENV="development"
+SENTRY_AUTH_TOKEN="your-sentry-auth-token"
