--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/cloudflare": "^12.6.11",
     "@astrojs/react": "^4.3.1",
     "@sentry/astro": "^10.12.0",
     "@strapi/blocks-react-renderer": "^1.0.2",
