Configure Vite SSR externals and disable Sentry telemetry for Cloudflare compatibility
- Add extensive list of Node.js built-in modules to Vite SSR external configuration
- Disable Sentry telemetry and default integrations in client and server configs
- Add preview:cloudflare script for local Cloudflare Pages development
- Convert type imports to use 'type' keyword for better tree-shaking
- Rename 'page' parameter to 'pageNumber' to avoid conflict

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
+    "preview:cloudflare": "npx wrangler pages dev ./dist",
     "astro": "astro"
   },
   "dependencies": {
