--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,10 +38,12 @@ jobs:
           if [[ "${{ github.ref_name }}" == "master" ]]; then
             echo "STRAPI_API_URL=${{ secrets.PROD_STRAPI_URL }}" >> $GITHUB_ENV
             echo "STRAPI_API_TOKEN=${{ secrets.PROD_STRAPI_TOKEN }}" >> $GITHUB_ENV
+            echo "STRAPI_IMAGES_URL=${{ secrets.STRAPI_IMAGES_URL_PROD }}" >> $GITHUB_ENV
             echo "Using production Strapi: ${{ secrets.PROD_STRAPI_URL }}"
           else
             echo "STRAPI_API_URL=${{ secrets.DEV_STRAPI_URL }}" >> $GITHUB_ENV
             echo "STRAPI_API_TOKEN=${{ secrets.DEV_STRAPI_TOKEN }}" >> $GITHUB_ENV
+            echo "STRAPI_IMAGES_URL=${{ secrets.STRAPI_IMAGES_URL_DEV }}" >> $GITHUB_ENV
             echo "Using development Strapi: ${{ secrets.DEV_STRAPI_URL }}"
           fi
 
@@ -49,6 +51,8 @@ jobs:
         env:
           STRAPI_API_URL: ${{ env.STRAPI_API_URL }}
           STRAPI_API_TOKEN: ${{ env.STRAPI_API_TOKEN }}
+          STRAPI_IMAGES_URL: ${{ env.STRAPI_IMAGES_URL }}
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
         run: pnpm build
 
       # Install Wrangler CLI for Cloudflare Pages deployment
