--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,5 @@ STRAPI_API_URL="http://localhost:1337/api"
 STRAPI_IMAGES_URL="http://localhost:1337"
 STRAPI_API_TOKEN="05081ad..."
 
-NODE_ENV="development"
+NODE_ENV="production"
 SENTRY_AUTH_TOKEN="your-sentry-auth-token"
